<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2B3E42"
    tools:context=".Screens.LoginFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="serif"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="@+id/et_email" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="serif"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:textColor="@color/white"
        android:textColorHint="#CDC9C9"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:fontFamily="serif"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/et_password"
        app:layout_constraintStart_toStartOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="serif"
        android:hint="@string/pas_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:textColor="@color/white"
        android:textColorHint="#CDC9C9"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_email"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#A46CCD"
        android:fontFamily="serif"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/et_password"
        app:layout_constraintStart_toEndOf="@+id/signup_btn"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintVertical_bias="0.279"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:backgroundTint="#455195"
        android:fontFamily="serif"
        android:text="@string/new_login"
        android:textAllCaps="false"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/login_btn"
        app:layout_constraintEnd_toStartOf="@id/login_btn"
        app:layout_constraintStart_toStartOf="@+id/et_password"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>
